@@ -1,0 +1,17 @@
+#!/bin/sh
+# pip command and option completion for zsh shell.
+# You need to source this shell script with a command like this::
+#
+#   source /path/to/pip-completion.zsh
+#
+
+function _pip_completion {
+  local words cword
+  read -Ac words
+  read -cn cword
+  reply=( $( COMP_WORDS="$words[*]" \
+             COMP_CWORD=$(( cword-1 )) \
+             PIP_AUTO_COMPLETE=1 $words[1] ) )
+}
+
+compctl -K _pip_completion pip
